--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -15,3 +15,13 @@
      margin: 0 auto;
      max-width: 800px;
  }
+
+
+ button {
+     background-color: $red;
+     color: $white;
+     padding: 0.7rem 1rem;
+     border-radius: 20px;
+     border: 0;
+     cursor: pointer;
+ }
